# SpectraFit-Core

./: .gitignore  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  LIMITATIONS.md  MODELS.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: AGENT_SKILL_MAP.md  house-rules.md  launch.json  settings.json  tool-registry.json
.claude/agents/: ci-failure-router.agent.md  cloud-batch-analyzer.agent.md  pipeline-monitor.agent.md  schema-migration-auditor.agent.md  universal-explore.agent.md  validation-reviewer.agent.md
.claude/audit/: README.md  cleanup-old-logs.sh  generate-weekly-report.sh  violations-blocked.txt
.claude/hooks/: audit-decisions-topic-index.sh  cargo-check-on-rust-edit.sh  contract-sync-reminder.sh  decisions-adr-reminder.sh  enforce-match-dispatch.sh  enforce-modeltype-parity.sh  enforce-perf-accuracy.sh  enforce-pydantic-native.sh  enforce-pydantic-only.sh  enforce-render-boundary.sh  enforce-serena-first.sh  frontend-soft-freeze.sh  git-hygiene-session.sh  guard-branch-freshness.sh  guard-ledger-freshness.sh  guard-memory-hazards.sh  guard-test-hygiene.sh  pre-merge-dag.sh  pre-merge-perf-baseline.sh  pre-merge-pyO3.sh  pre-merge-schema-sync.sh  protect-nist-fixtures.sh  run-hook.sh  suggest-ai-agent-guidelines.sh  suggest-discovery-enrichment.sh
.claude/instructions/: automation-validation.md  benchmark-dashboard-evidence.md  benchmark-export-compat.md  benchmark-pydantic-native.md  benchmark-table-contract.md  benchmark-theme-extraction.md  design-decisions.md  docs-and-typing.md  docs-architecture.md  exemptions.md  extras-typing.md  frontend-modular-jsx.md  max-coverage.md  perf-accuracy-tdd.md  performance-benchmark.md  pre-commit.md  pydantic-schema-sync.md  pydantic-typing.md  pydantic-validators.md  report-theme-caligo.md  rust-model-kernel.md  self-correction.md  speedboat-feedback.md  tdd-routing.md  testing-conventions.md
.claude/scripts/: cloud_batch_hook.py  validate_agent_skill_map.py
.claude/skills/: INDEX.schema.json  INDEX.yaml
.claude/validators/: pydantic_bash.py  pydantic_create.py  pydantic_edit.py  validate-bash.sh  validate-create.sh  validate-edit.sh
.github/: BRANCH_PROTECTION.md  dependabot.yml
.github/docs/: enforcement-report.md
.github/workflows/: benchmark.yml  ci.yml  claude-code-review.yml  claude.yml  docstring-check.yml  pre-commit-check.yml  release.yml
.gitlab/: 00-defaults.yml  10-setup.yml  20-lint.yml  30-test.yml  40-coverage.yml  50-build.yml  55-deep-bench.yml  60-pages.yml  70-publish.yml  docker-build.yml
.gitlab/docker/: Dockerfile.ci
.serena/: project.yml
.serena/memories/: api-stability-baseline.md  package-layout-benchmark-oracles.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion_checklist.md  trust-ledger-wire-status-semantics.md  web-panel-registry-architecture.md
.spectrafit_reports/: perf_baseline.json
analysis/: .gitignore
analysis/spectrafit-core/: ARCHITECTURE.mmd  ASSESSMENT.md
benchmark/scenarios/: regression-smoke-gaussian.yaml
crates/: README.md
crates/spectrafit-builder/: Cargo.toml
crates/spectrafit-builder/src/: lib.rs
crates/spectrafit-builder/tests/: builder_roundtrip.rs
crates/spectrafit-core/: Cargo.toml  build.rs
crates/spectrafit-core/src/: lib.rs
crates/spectrafit-dogleg/: Cargo.toml
crates/spectrafit-dogleg/src/: driver.rs  lib.rs  problem.rs  step.rs  tests.rs
crates/spectrafit-graph/: Cargo.toml
crates/spectrafit-graph/src/: compiler.rs  error.rs  executor.rs  expr.rs  lib.rs
crates/spectrafit-levenberg-marquardt/: Cargo.toml
crates/spectrafit-levenberg-marquardt/src/: driver.rs  lib.rs  problem.rs  step.rs  tests.rs
crates/spectrafit-models/: Cargo.toml  build.rs
crates/spectrafit-newton-cg/: Cargo.toml
crates/spectrafit-newton-cg/src/: driver.rs  lib.rs  problem.rs  step.rs  tests.rs
crates/spectrafit-solver/: Cargo.toml
crates/spectrafit-solver/src/: dispatch.rs  error.rs  global.rs  irls.rs  lib.rs  postfit.rs  problem.rs
crates/spectrafit-solver/tests/: gaussian2d.rs  parity.rs
crates/spectrafit-trust-region/: Cargo.toml
crates/spectrafit-trust-region/src/: driver.rs  lib.rs  problem.rs  report.rs  step.rs  tests.rs
crates/spectrafit-types/: Cargo.toml
crates/spectrafit-varpro/: Cargo.toml
crates/spectrafit-varpro/src/: lib.rs  model.rs  solver.rs
crates/spectrafit-varpro/tests/: integration.rs
docs/: PARITY.md  audit-2026-07-02-three-language-audit.md  mcp-install-guide.md  methodology.md  migration-github-to-claude.md  rust_binding_audit.md  whitepaper_methodology.md
docs/examples/: 3d_fitting.md  fitting.md  multi_dataset.md  shared_params.md
docs/research/: 2026-06-12-trustworthy-benchmark-research-brief.md
docs/validators/: integration.md  quick-start.md  strategy.md
python/oracles/: MODELS_CATALOG.md  __init__.py  _engine_base.py  _engine_multidim.py  _engine_nested.py  _engine_profile.py  api.py  bench_contract.py  cases.py  cli.py  contract.py  engine.py  forensics.py  inference.py  inference_report.py  metrics.py  migrate.py  models.py  nested.py  panels.py  reports.py  stability.py  synth.py  trust_ledger.py
python/spectrafit_core/: __init__.py  _core.pyi  compose.py  data.py  evaluate.py  fit.py  graph.py  models.py  options.py  parameters.py  result.py
scripts/: audit_bindings.py  backport_from_github.py  bg.sh  check_pytest_bg.sh  check_stale_github_branches.py  coverage_atlas.py  fast_lane_gate.py  mcp_spectrafit_reports.py  publish_exclusions.py  publish_remove_excluded.py  publish_snapshot.sh  purge_github_actions_runs.py  run_pytest_bg.sh  self_heal_automation.py
scripts/audit/: emit_vs_consume.py
tests/: conftest.py
tests/audit/: conftest.py  test_audit_api_schema.py  test_audit_claim_registry.py  (+27 more)
web/: .gitignore  README.md  index.html  openapi.snapshot.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+485 files in other folders)
