[project]
name = "spectrafit-core"
version = "0.1.0b1"
description = "High-performance numerical fitting framework: Rust kernel + Pydantic schemas"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Anselm Hahn", email = "anselm.hahn@gmail.com" }]
maintainers = [{ name = "Anselm Hahn", email = "anselm.hahn@gmail.com" }]
keywords = ["curve-fitting", "spectroscopy", "levenberg-marquardt", "rust", "pydantic", "benchmark"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.13"
dependencies = ["numpy>=2.4.4", "pydantic>=2.13.3"]


[project.urls]
Homepage = "https://github.com/Anselmoo/spectrafit-core"
Repository = "https://github.com/Anselmoo/spectrafit-core"
Issues = "https://github.com/Anselmoo/spectrafit-core/issues"
Changelog = "https://github.com/Anselmoo/spectrafit-core/blob/main/CHANGELOG.md"


[project.optional-dependencies]

# Benchmark engine: spectrafit is the subject (the Rust kernel via spectrafit_core);
# lmfit + jax/optimistix are independent cross-verification oracles. The report is
# served at runtime by the FastAPI app (oracles.api) — the single source of truth
# the web/ React UI fetches at load time (no inlined fixture) — so fastapi + uvicorn
# are part of the benchmark experience. jax (the heavy jaxlib wheel) is a SEPARATE extra
# so core CI stays fast — the engine degrades gracefully to spectrafit+lmfit when jax is
# absent (get_backends guards it).
benchmark = [
    "lmfit>=1.3.4",
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "matplotlib>=3.8",
]

jax = [
    "jax>=0.10.0",
    "jaxlib>=0.10.0",
    "optimistix>=0.0.1",
]


[dependency-groups]
dev = [
    "poethepoet>=0.34",
    "pre-commit>=4.0",
    # `pytest-cov` covers Python-side branches; the Rust-side llvm-cov merge
    # (CI step "Run pytest with Python + Rust coverage") wraps the same pytest
    # call under `cargo llvm-cov` instrumentation, so a single pytest invocation
    # contributes to BOTH `coverage.xml` (Python) AND `target/llvm-cov/lcov.info`
    # (Rust). Local repro: `source <(cargo llvm-cov show-env --sh)` then
    # `uv run maturin develop` and `PYTHONPATH=python uv run pytest ...` —
    # requires `LLVM_COV` + `LLVM_PROFDATA` env vars on macOS.
    "pytest-cov>=5.0",
    "pytest>=8.0",
    # pytest-xdist: shard the suite across cores (`-n auto`) so the CI pytest job
    # fits under the GWDG 3600 s runner cap. Tests are xdist-safe — the
    # .spectrafit_reports writers all monkeypatch.chdir(tmp_path) for isolation.
    "pytest-xdist>=3.6",
    # hypothesis for property-based testing, especially wire W1 (synth invariants).
    "hypothesis>=6.88.0",
    # FastAPI's TestClient (Starlette) needs httpx; used by tests/test_bench_api.py.
    "httpx>=0.27",
    "ruff>=0.6",
    "ty>=0.0.1a16",
    "repo-release-tools>=1.2.0",
    # Build backend for the PyO3 extension. CI's "Build extension" steps call
    # `uv run maturin develop` (ci.yml / benchmark.yml); without maturin in the dev
    # group that command fails to spawn ("No such file or directory").
    "maturin>=1.7",
]
docs = ["zensical>=0.0.41"]


[tool.rrt]
primary_remote = "gitlab"
release_branch = "release/v{version}"
changelog_file = "CHANGELOG.md"

[[tool.rrt.version_targets]]
path = "pyproject.toml"
kind = "pep621"

[tool.rrt.publish_targets.github]
remote = "github"
branch = "main"
message = "Initial commit"
exclude = [
    "docs/superpowers/plans/*",
    "docs/superpowers/specs/*",
    "docs/superpowers/ledgers/*",
    ".claude/audit/*.jsonl",
    "DECISIONS.md",
]


[tool.rrt.folders]

# Repository folder contract, enforced by `rrt folder check` (CI + pre-commit).
# Single source of truth for required structure; supersedes scripts/validate_repo_layout.sh.
# `required_*` entries are enforced by `check` (a listed path that is absent fails it), so they
# must list only committed source. Gitignored output surfaces go in `scaffold_dirs`, which
# `scaffold` creates but `check` does NOT enforce (so a fresh checkout never flakes).

[[tool.rrt.folders.templates]]
name = "repo-root-required-files"
description = "Root-level files required for spectrafit-core repo"
strictness = "strict"
exact = false
required_files = [
    "README.md",
    "CHANGELOG.md",
    "DECISIONS.md",
    "pyproject.toml",
    "Cargo.toml",
    "LICENSE",
    "CITATION.cff",
    "CONTRIBUTING.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    "LIMITATIONS.md",
]

[[tool.rrt.folders.templates]]
name = "repo-root-required-dirs"
description = "Root-level directories required for spectrafit-core repo structure"
strictness = "strict"
exact = false
required_dirs = [
    "python",
    "python/oracles",
    "python/oracles/backends",
    "python/spectrafit_core",
    "crates",
    "crates/spectrafit-core",
    "crates/spectrafit-core/src",
    "crates/spectrafit-graph",
    "crates/spectrafit-graph/src",
    "crates/spectrafit-models",
    "crates/spectrafit-models/src",
    "crates/spectrafit-solver",
    "crates/spectrafit-solver/src",
    "crates/spectrafit-levenberg-marquardt",
    "crates/spectrafit-levenberg-marquardt/src",
    "crates/spectrafit-dogleg",
    "crates/spectrafit-dogleg/src",
    "crates/spectrafit-newton-cg",
    "crates/spectrafit-newton-cg/src",
    "crates/spectrafit-trust-region",
    "crates/spectrafit-trust-region/src",
    "crates/spectrafit-types",
    "crates/spectrafit-types/src",
    "crates/spectrafit-varpro",
    "crates/spectrafit-varpro/src",
    "tests",
    ".github",
    "scripts",
    "python/oracles",
    "python/oracles/audit",
]

# NOTE: the benchmark / quick-validation folder templates were removed in the
# benchmark-experience rebuild (Phase 1). New engine + report-output templates
# (.spectrafit_reports/<category>/<date>_run_NNN, python/benchmark/*) are
# (re)introduced in Phase 4/6.

# Canonical per-method solver-crate layout. Every Levenberg–Marquardt-family /
# trust-region *method* crate follows the same skeleton so a new solver is a
# stamp, not a bespoke decision: {Cargo.toml, src/{lib,driver,step,problem,tests}.rs}.
[[tool.rrt.folders.templates]]
name = "solver-crate"
description = "Canonical per-method solver crate layout (driver/step/problem/lib/tests)"
strictness = "loose"
exact = false
required_files = [
    "Cargo.toml",
    "src/lib.rs",
    "src/driver.rs",
    "src/step.rs",
    "src/problem.rs",
    "src/tests.rs",
]

[[tool.rrt.folders.rules]]
name = "repo-structure"
selector = "."
mode = "strict"
templates = [
    "repo-root-required-files",
    "repo-root-required-dirs",
]

[[tool.rrt.folders.rules]]
name = "solver-crate-levenberg-marquardt"
selector = "crates/spectrafit-levenberg-marquardt"
mode = "strict"
templates = ["solver-crate"]

[[tool.rrt.folders.rules]]
name = "solver-crate-dogleg"
selector = "crates/spectrafit-dogleg"
mode = "strict"
templates = ["solver-crate"]

[[tool.rrt.folders.rules]]
name = "solver-crate-newton-cg"
selector = "crates/spectrafit-newton-cg"
mode = "strict"
templates = ["solver-crate"]


[tool.maturin]
python-source = "python"
python-packages = ["spectrafit_core"]
module-name = "spectrafit_core._core"
features = ["pyo3/extension-module"]
manifest-path = "crates/spectrafit-core/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py"]
# A test marked xfail that actually passes is a FAILURE: it means the feature
# landed and the stale marker is hiding the test (zero regression protection).
xfail_strict = true
# Default run excludes `slow` tests (e.g. the full-history results.json round-trip:
# ~46 MB × every run on disk OOM-kills the suite). Opt in on an ample-RAM machine
# or CI runner with `pytest -m slow`.
addopts = "-m 'not slow'"
markers = [
    "speedboat: performance assertion tests — go red on regression, green when optimization lands",
    "slow: end-to-end checks against the real latest benchmark run (skipped when none on disk)",
]

# ---------------------------------------------------------------------------
# Coverage — global Python floor + per-module critical-path floors.
# Rust has had an 85 % workspace floor since the cjermain merge; Python had
# NO floor at all, so aggregate metrics could rot freely while the gate stayed
# green. The global floor closes the asymmetry; the per-module gates in
# `ci.yml` enforce critical-path coverage where it actually matters
# (engine.py + _spectrafit.py + the PyO3 boundary crate).
# Numbers are conservative (70 %); tighten in a follow-up once measured.
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["python/spectrafit_core", "python/oracles"]
branch = false
parallel = false

[tool.coverage.report]
# Floor set against measured baseline (2026-06-08): full pytest sweep gave
# 94.23 % on python/spectrafit_core + python/benchmark. 85 % locks in
# current reality with ~9 pts honest-regression headroom; per-module floors
# in `ci.yml` enforce critical-path coverage at tighter thresholds.
fail_under = 85
show_missing = true
skip_empty = true
precision = 1
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ---------------------------------------------------------------------------
# Global poe environment — injected into every task
# ---------------------------------------------------------------------------
[tool.poe.env]
PYTHONPATH = "python"

# ---------------------------------------------------------------------------
# Private helpers (leading _ hides from `poe --help`)
# ---------------------------------------------------------------------------

# Shared setup: sync benchmark + jax deps (full local experience) + compile extension
[tool.poe.tasks._setup_benchmark]
sequence = [
    { cmd = "uv sync --extra benchmark --extra jax" },
    # --release is REQUIRED: a debug extension runs ~20-50x slower than release, which
    # makes spectrafit lose to pure-Python lmfit and fails the gate on a build artifact
    # (accuracy is identical; only timing collapses). The benchmark measures release perf.
    { cmd = "uv run --with maturin maturin develop --release" },
]

# ---------------------------------------------------------------------------
# Developer tooling
# ---------------------------------------------------------------------------

[tool.poe.tasks.lint]
help = "Run ruff and ty static checks"
cmd = "ruff check . && ty check"

# Mirrors .gitlab/20-lint.yml `lint:python` byte-for-byte (no autofix,
# CI-strict). Run before `git push` to catch what GitLab would catch in CI,
# without the ~3 min GWDG-runner round-trip. The analyzer MCP exposes the
# same checks via `mcp__analyzer__ruff-check-ci` + `mcp__analyzer__ty-check`;
# this poe task is the CLI fallback when the MCP is unreachable.
[tool.poe.tasks.lint_ci]
help = "Mirror .gitlab/20-lint.yml lint:python (no autofix, CI-strict)"
shell = """
  set -e
  uv run --no-sync ruff format --check .
  uv run --no-sync ruff check .
  uv run --no-sync ty check python/spectrafit_core python/oracles
"""

[tool.poe.tasks.docstring]
help = "Check docstrings via ruff's built-in pydocstyle (D) rules"
cmd = "ruff check . --select D"

[tool.poe.tasks.self_heal]
help = "Auto-fix safe issues detected by self-heal automation"
cmd = "uv run python scripts/self_heal_automation.py --mode fix-safe"

[tool.poe.tasks.self_heal_check]
help = "Dry-run self-heal and fail if any fixes are needed"
cmd = "uv run python scripts/self_heal_automation.py --mode check --fail-on-fixes"

[tool.poe.tasks.upgrade-deps]
help = "Upgrade all lock-files (uv, cargo) then rebuild the Rust extension"
shell = """
  set -e
  echo "[upgrade-deps] Upgrading Python lock-file..."
  uv lock --upgrade

  echo "[upgrade-deps] Updating Rust lock-file..."
  cargo update || echo "[upgrade-deps] WARN: cargo update failed (non-fatal)"

  echo "[upgrade-deps] Rebuilding Rust extension..."
  uv run --with maturin maturin develop

  echo "[upgrade-deps] Done. Run: uv run poe qv"
"""

# ---------------------------------------------------------------------------
# Benchmark engine (benchmark) → run report (results.json + manifest.json).
# The report is served at runtime by the FastAPI app (`poe serve`); the web/ UI
# fetches it — there is no inlined HTML artifact.
# ---------------------------------------------------------------------------

[tool.poe.tasks.benchmark]
help = "Run the benchmark engine; write results.json + manifest.json into a run dir"
sequence = [
    { ref = "_setup_benchmark" },
    { cmd = "uv run python -m oracles.cli run" },
]

[tool.poe.tasks.benchmark_quick]
help = "Fast benchmark (lean reps) for local iteration"
sequence = [
    { ref = "_setup_benchmark" },
    { cmd = "uv run python -m oracles.cli run --reps 3 --mc 6" },
]

[tool.poe.tasks.benchmark_gate]
help = "Run the spectrafit-vs-lmfit regression gate on the latest run"
cmd = "uv run python -m oracles.cli gate"

# Cycle 27 — close the local coverage blind spot. CI enforces an 85 % floor
# plus per-module floors (engine/fit/evaluate/graph); locally you had to
# remember the raw pytest --cov incantation. `poe coverage` mirrors the CI
# step exactly: same source list, same per-module floors echoed. Prints
# both the aggregate and the four critical-path numbers so a contributor
# sees the picture without opening `coverage-atlas.html`.
[tool.poe.tasks.coverage]
help = "Run pytest with coverage and echo aggregate + 4 critical-path floors"
shell = """
  set -e
  PYTHONPATH=python uv run pytest -q \
    --cov=python/spectrafit_core --cov=python/oracles \
    --cov-report=term --cov-report=xml
  echo ""
  echo "── critical-path floors ─────────────────────────────────────────"
  uv run coverage report --include='python/oracles/engine.py'        --fail-under=85
  uv run coverage report --include='python/spectrafit_core/fit.py'        --fail-under=90
  uv run coverage report --include='python/spectrafit_core/evaluate.py'   --fail-under=90
  uv run coverage report --include='python/spectrafit_core/graph.py'      --fail-under=80
"""

[tool.poe.tasks.coverage_html]
help = "Coverage with HTML report under htmlcov/ (browse module-by-module)"
shell = """
  set -e
  PYTHONPATH=python uv run pytest -q \
    --cov=python/spectrafit_core --cov=python/oracles \
    --cov-report=term --cov-report=xml --cov-report=html
  echo ""
  echo "→ open htmlcov/index.html"
"""

[tool.poe.tasks.serve]
help = "Serve the latest BenchReport over FastAPI for the web UI (http://localhost:8000)"
cmd = "uv run --extra benchmark python -m uvicorn oracles.api:app --port 8000"

[tool.poe.tasks.contract_regen]
help = "Regenerate ALL contract-derived artifacts (Python golden + web TS + web snapshot) after a contract.py change"
shell = """
set -euo pipefail
uv run pytest tests/audit/test_audit_openapi_watchdog.py --update-golden -q
( kill $(lsof -tiTCP:8000 -sTCP:LISTEN) 2>/dev/null || true )
nohup uv run --extra benchmark python -m uvicorn oracles.api:app --port 8000 >/tmp/sf-api-regen.log 2>&1 & disown
for i in $(seq 1 30); do curl -sf localhost:8000/openapi.json >/dev/null && break; sleep 1; done
curl -sf localhost:8000/openapi.json >/dev/null || { echo "API did not start on :8000"; tail -20 /tmp/sf-api-regen.log; kill $(lsof -tiTCP:8000 -sTCP:LISTEN) 2>/dev/null || true; exit 1; }
( cd web && npm run contract )
curl -s localhost:8000/openapi.json | python3 -m json.tool > web/openapi.snapshot.json
kill $(lsof -tiTCP:8000 -sTCP:LISTEN) 2>/dev/null || true
echo "contract_regen done — review: git status --porcelain"
"""

[tool.poe.tasks.web_smoke]
help = "Build the web UI and runtime-smoke the 5 views (no browser needed)"
shell = "cd web && npm ci && npm run typecheck && npm run smoke && npm run build"

[tool.poe.tasks.web_e2e]
help = "Run web Playwright wired tests (requires `npx playwright install chromium`)"
shell = "cd web && npx playwright test"

[tool.poe.tasks.report_e2e]
help = "Playwright UX test on the bundled report.html (requires `poe report_html` first or REPORT_HTML_PATH env)"
shell = """
  set -e
  REPORT="${REPORT_HTML_PATH:-$(uv run python -c 'from pathlib import Path; from oracles.reports import latest_results; p = latest_results("benchmark"); print(str((p.parent / "report.html").resolve()) if p else "")')}"
  if [ -z "$REPORT" ] || [ ! -f "$REPORT" ]; then
    echo "ERROR: report.html not found. Run 'uv run poe report_html' first or set REPORT_HTML_PATH."
    exit 1
  fi
  cd web && REPORT_HTML_PATH="$REPORT" npx playwright test tests/e2e/report-ux.spec.ts
"""

[tool.poe.tasks._bundle_report_html]
help = "Bundle the LATEST benchmark run into a self-contained, offline report.html"
shell = """
RESULTS=$(uv run python -c "from oracles.reports import latest_results; p=latest_results('benchmark'); print(p.resolve() if p else '')")
if [ -z "$RESULTS" ]; then echo "no benchmark run found — run 'uv run poe benchmark' first" >&2; exit 1; fi
RESULTS=$(uv run python -c "from oracles.migrate import migrate_to_current; print(migrate_to_current('$RESULTS'))")
cd web && npm ci && npm run typecheck && BENCH_JSON="$RESULTS" npm run build:html
DEST="$(dirname "$RESULTS")/report.html"
cp dist-html/index.html "$DEST"
echo "self-contained report -> $DEST ($(du -h "$DEST" | cut -f1))"
"""

[tool.poe.tasks.report_html]
help = "Pipeline: build extension -> benchmark -> self-contained, deployable report.html (data inlined, opens offline)"
sequence = [
  { ref = "_setup_benchmark" },
  { cmd = "uv run python -m oracles.cli run" },
  { ref = "_bundle_report_html" },
]

[tool.poe.tasks.bundle_report_only]
help = "Bundle latest results.json into report.html WITHOUT re-running the benchmark"
sequence = [ { ref = "_bundle_report_html" } ]

# ---------------------------------------------------------------------------
[tool.poe.tasks.scenario_smoke]
help = "Fast pre-merge smoke gate: spectrafit vs lmfit on the canonical regression scenario"
cmd = "uv run pytest tests/scenario/test_smoke.py -v"

[tool.poe.tasks.trust_audit]
help = "Run the W1–W6 V&V trust audit test set (Plan E ground-truth harness)"
cmd = "pytest tests/audit/ -v"

[tool.poe.tasks.migration_smoke]
help = "30s sanity check: verify new import paths resolve after the bench → oracles restructure"
cmd = "uv run pytest tests/unit/benchmark/test_contract.py tests/integration/benchmark/test_engine.py tests/audit/test_audit_trust_ledger_contract.py -q"

# Background job entry points (generic dispatcher; specific wrappers return in
# Phase 6/8). Check: bash scripts/check_pytest_bg.sh --job <job_id>
# ---------------------------------------------------------------------------

[tool.poe.tasks.run_bg]
help = "Universal background dispatcher: uv run poe run_bg <task>  (e.g. run_bg benchmark_super)"
cmd = "scripts/run_pytest_bg.sh --poe ${task}"
args = [
    { name = "task", positional = true, help = "Any poe task name, e.g. benchmark_super, benchmark_cold_hot, qv_all" },
]

[tool.poe.tasks.bg_status]
help = "Check background job status (all by default; optional --job and --tail)"
cmd = "scripts/check_pytest_bg.sh ${job:+--job ${job}} ${tail:+--tail ${tail}}"
args = [
    { name = "job", options = [
        "--job",
    ], default = "", help = "Optional job id" },
    { name = "tail", options = [
        "--tail",
    ], default = "", help = "Optional tail line count" },
]

[tool.poe.tasks.prune_worktrees]
help = "On-demand worktree hygiene: prune stale registrations, auto-remove merged worktrees, flag unmerged/locked ones. GIT_HYGIENE_PRUNE_OFF=1 for warn-only."
shell = "source .claude/hooks/lib/git-hygiene.sh && prune_worktrees"

[tool.poe.tasks.backport_github]
help = "List commits on a GitHub branch not yet on local main, with a cherry-pick/squash recipe (uv run poe backport_github [branch] [--squash])"
cmd = "python3 scripts/backport_from_github.py --github-branch ${branch} ${squash:+--squash}"
args = [
    { name = "branch", positional = true, default = "main", help = "GitHub branch to check — default 'main' covers direct-edit-in-transit; pass a feature-branch name for the GitHub-first iteration lane" },
    { name = "squash", options = ["--squash"], type = "boolean", help = "Suggest a squash-merge recipe instead of per-commit cherry-picks" },
]

[tool.poe.tasks.check_stale_github_branches]
help = "List GitHub-mirror branches with un-backported commits older than N days (uv run poe check_stale_github_branches [--min-age-days N] [--strict])"
cmd = "python3 scripts/check_stale_github_branches.py --min-age-days ${min_age_days} ${strict:+--strict}"
args = [
    { name = "min_age_days", options = ["--min-age-days"], default = "14", help = "only flag branches whose newest commit is at least this many days old" },
    { name = "strict", options = ["--strict"], type = "boolean", help = "exit 1 if any stale branch is found, instead of always exiting 0" },
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"


[tool.ty.analysis]
# `jax`/`optimistix` are the HEAVY optional backend (the `jax` extra), intentionally
# NOT installed in the fast pre-commit / core CI jobs — so `ty` cannot resolve them
# there. Their imports are already runtime-guarded (try/except in backends/_jax.py;
# the engine degrades to spectrafit+lmfit when absent), so a missing module is not a
# bug. Declaring them here suppresses `unresolved-import` ONLY for these globs (real
# missing core/typo imports still error). The LIGHT deps (fastapi/typer/lmfit/scipy)
# are installed via `--extra benchmark`, so they are genuinely type-checked.
allowed-unresolved-imports = ["jax", "jax.**", "optimistix", "optimistix.**"]

[tool.ruff]
# Project-wide Ruff configuration: include pydocstyle (D) checks in the lint pass.
line-length = 88
target-version = "py313"
# ``.claude`` holds harness tooling/skill scaffolds and generated examples that
# are not shipped library source and are not held to pydocstyle standards.
extend-exclude = [".claude"]

[tool.ruff.lint]
extend-select = ["D"]

[tool.ruff.lint.per-file-ignores]
# Tests are self-documenting via their names; don't hold them to pydocstyle.
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
# Google-style docstrings, enforced via ruff's built-in pydocstyle (D) rules
# (no separate pydocstyle dependency).
convention = "google"
