[package]
name = "spectrafit-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "spectrafit_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
spectrafit-types = { workspace = true }
spectrafit-models = { workspace = true }
spectrafit-graph = { workspace = true }
spectrafit-solver = { workspace = true }
pyo3 = { workspace = true }
numpy = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
