[package]
name    = "spectrafit-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
spectrafit-types  = { workspace = true }
spectrafit-models = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
rayon      = { workspace = true }
nalgebra   = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
