[package]
name = "spectrafit-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
spectrafit-types = { workspace = true }
spectrafit-models = { workspace = true }
spectrafit-graph = { workspace = true }
spectrafit-varpro = { workspace = true }
spectrafit-levenberg-marquardt = { workspace = true }
spectrafit-dogleg = { workspace = true }
spectrafit-newton-cg = { workspace = true }
nalgebra = { workspace = true }
levenberg-marquardt = { workspace = true }
faer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
